# obsidian-rag

./: .gitignore  .pre-commit-config.yaml  README.md  config_example.json  docker-compose.yml  metrics.ipynb  pyproject.toml  requirements.txt
app/: .env.example  app.py  init_db.py  streamlit_app.py
app/api/: schemas.py
app/core/: bge.py  chain.py  embeddings.py  format.py  instruction.py  qdrant.py  settings.py  update.py
builds/backend/: Dockerfile  requirements.txt
builds/bot/: Dockerfile  requirements.txt
builds/frontend/: Dockerfile  requirements.txt
builds/init/: Dockerfile  requirements.txt
builds/mlflow/: Dockerfile
