[tool.poetry]
name = "mindminer"
version = "0.1.0"
description = ""
authors = ["ObsiMiners"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<3.13"

fastapi = "^0.115.6"
streamlit = "^1.41.1"
langchain = "^0.3.12"
langchain-community = "^0.3.12"
langchain-qdrant = "^0.2.0"
langchain-groq = "^0.2.1"
markdown = "^3.7"
unstructured = "^0.16.11"
flagembedding = "^1.3.3"
nltk = "^3.9.1"
langchain-openai = "^0.2.12"
uvicorn = "^0.34.0"
langchain-gigachat = "^0.3.2"
pydantic = "^2.9.0"
aiogram = "^3.15.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.6.3"
pre-commit = "^3.7.1"
mypy = "^1.10.0"
types-requests = "^2.32.0.20240602"
ipykernel = "^6.29.5"
pydantic = {extras = ["mypy"], version = "^2.9.0"}

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [".venv", "venv", "tests", "research", "qdrant_data"]

[tool.ruff.lint]
ignore = ["RUF002", "RUF003", "T201", "ERA001", "FBT002", "FBT001", "A001", "C901", "S403", "S301", "RUF001",  "BLE001"]
fixable = ["I", "B", "RUF", "F"]
select = [
    "I",     # Isort rules
    "C90",   # Maccabe complexity
    "ASYNC", # flake8-async
    "S",     #  flake8-bandit
    "BLE",   # flake8-blind-except
    "B",     # flake8-bugbear
    "A",     # flake8-builtins
    "C4",    # flake8-comprehensions
    "T20",   # flake8-print
    # "RET",   # flake8-return
    "SLF", # flake8-self
    "RUF", # ruff
    "ERA", # eradicate
    "PTH", # flake8-use-pathlib
    "FBT", # flake8-boolean-trap
    "F",   # pyflakes
]
preview = true

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F403"]

[tool.mypy]
exclude = [".venv", "tests", "research", "data"]
plugins = ["pydantic.mypy"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
